--- a/src/main/resources/com/example/pilifitproject/view/Collection.fxml
+++ b/src/main/resources/com/example/pilifitproject/view/Collection.fxml
@@ -77,7 +77,7 @@
             <children>
                 <ScrollPane fitToHeight="true" fitToWidth="true" layoutX="225.0" layoutY="21.0" prefHeight="480.0">
                     <content>
-                        <GridPane id="upload/itemsgridpane" gridLinesVisible="true" hgap="15.0" vgap="10.0">
+                        <GridPane id="upload/itemsgridpane" fx:id="fitItemGrid" gridLinesVisible="true" hgap="15.0" vgap="10.0">
                             <columnConstraints>
                                 <ColumnConstraints hgrow="SOMETIMES" maxWidth="261.0" minWidth="261.0" percentWidth="0.0" prefWidth="261.0" />
                                 <ColumnConstraints halignment="CENTER" hgrow="ALWAYS" maxWidth="261.0" minWidth="261.0" percentWidth="0.0" prefWidth="261.0" />
