--- a/src/main/resources/com/example/pilifitproject/view/FitDialog.fxml
+++ b/src/main/resources/com/example/pilifitproject/view/FitDialog.fxml
@@ -13,23 +13,23 @@
             <children>
             <Pane layoutX="8.0" layoutY="10.0" prefHeight="100.0" prefWidth="110.0">
                <children>
-                  <ImageView id="TopItems" fitHeight="100.0" fitWidth="110.0" pickOnBounds="true" preserveRatio="true" />
+                  <ImageView fx:id="topImage" id="TopItems" fitHeight="100.0" fitWidth="110.0" pickOnBounds="true" preserveRatio="true" />
                </children>
             </Pane>
             <Pane layoutX="8.0" layoutY="120.0" prefHeight="100.0" prefWidth="110.0">
                <children>
-                  <ImageView id="BottomItems" fitHeight="100.0" fitWidth="110.0" pickOnBounds="true" preserveRatio="true" />
+                  <ImageView fx:id="bottomImage" id="BottomItems" fitHeight="100.0" fitWidth="110.0" pickOnBounds="true" preserveRatio="true" />
                </children>
             </Pane>
             <Pane layoutX="127.0" layoutY="79.0" prefHeight="100.0" prefWidth="110.0">
                <children>
-                  <ImageView id="ShoesItems" fitHeight="100.0" fitWidth="110.0" pickOnBounds="true" preserveRatio="true" />
+                  <ImageView fx:id="shoesImage" id="ShoesItems" fitHeight="100.0" fitWidth="110.0" pickOnBounds="true" preserveRatio="true" />
                </children>
             </Pane>
             </children>
         </Pane>
-          <TextField id="TitleOfTheOutfit" layoutX="12.0" layoutY="249.0" prefHeight="40.0" prefWidth="180.0" promptText="Fit Name" styleClass="nameFD-button" stylesheets="@../styles/FitDialog.css" />
-          <Button id="DeleteButton" layoutX="199.0" layoutY="247.0" mnemonicParsing="false" prefHeight="44.0" prefWidth="44.0" styleClass="icon-button" stylesheets="@../styles/ItemDisplay.css" text="🗑" />
+          <TextField fx:id="fitNameField" id="TitleOfTheOutfit" layoutX="12.0" layoutY="249.0" prefHeight="40.0" prefWidth="180.0" promptText="Fit Name" styleClass="nameFD-button" stylesheets="@../styles/FitDialog.css" />
+          <Button fx:id="deleteButton" id="DeleteButton" layoutX="199.0" layoutY="247.0" mnemonicParsing="false" prefHeight="44.0" prefWidth="44.0" styleClass="icon-button" stylesheets="@../styles/ItemDisplay.css" text="🗑" />
     </children>
    <stylesheets>
       <URL value="@../styles/FitDialog.css" />
