--- a/src/main/resources/com/example/pilifitproject/view/Collection.fxml
+++ b/src/main/resources/com/example/pilifitproject/view/Collection.fxml
@@ -4,6 +4,8 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.effect.DropShadow?>
+<?import javafx.scene.effect.InnerShadow?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -77,7 +79,7 @@
             <children>
                 <ScrollPane fitToHeight="true" fitToWidth="true" layoutX="225.0" layoutY="21.0" prefHeight="480.0">
                     <content>
-                        <GridPane id="upload/itemsgridpane" fx:id="fitItemGrid" gridLinesVisible="true" hgap="15.0" vgap="10.0">
+                        <GridPane id="upload/itemsgridpane" gridLinesVisible="true" hgap="15.0" vgap="10.0">
                             <columnConstraints>
                                 <ColumnConstraints hgrow="SOMETIMES" maxWidth="261.0" minWidth="261.0" percentWidth="0.0" prefWidth="261.0" />
                                 <ColumnConstraints halignment="CENTER" hgrow="ALWAYS" maxWidth="261.0" minWidth="261.0" percentWidth="0.0" prefWidth="261.0" />
@@ -91,10 +93,16 @@
                             <padding>
                                 <Insets bottom="5.0" left="5.0" right="20.0" top="5.0" />
                             </padding>
+                     <effect>
+                        <InnerShadow />
+                     </effect>
                         </GridPane>
                     </content>
                 </ScrollPane>
             </children>
+         <effect>
+            <DropShadow />
+         </effect>
         </AnchorPane>
    </center>
 </BorderPane>
