--- a/src/main/resources/com/example/pilifitproject/view/ItemDisplay.fxml
+++ b/src/main/resources/com/example/pilifitproject/view/ItemDisplay.fxml
@@ -13,12 +13,12 @@
             <Pane prefHeight="100.0" prefWidth="110.0">
                <children>
             
-                  <ImageView id="ItemImage" fx:id="ImageViewContainer" fitHeight="83.0" fitWidth="82.0" layoutX="15.0" layoutY="10.0" pickOnBounds="true" preserveRatio="true" />
+                  <ImageView id="ItemImage" fx:id="ImageViewContainer" fitHeight="83.0" fitWidth="82.0" layoutX="14.0" layoutY="10.0" pickOnBounds="true" preserveRatio="true" />
                   <Button id="ViewButton" fx:id="ViewItemEdit" layoutX="-5.0" layoutY="-2.0" mnemonicParsing="false" onAction="#handleEditButton" prefHeight="27.0" prefWidth="41.0" styleClass="view-button" text="👁️‍🗨️" />
                </children></Pane>
          </children>
       </Pane>
       <TextField fx:id="ClothingItemNameDisplay" layoutX="7.0" layoutY="115.0" prefHeight="21.0" prefWidth="74.0" promptText="Item Name" styleClass="name-button" stylesheets="@../styles/ItemDisplay.css" />
-      <Button id="favoritebutton" ellipsisString="♥︎" layoutX="80.0" layoutY="113.0" mnemonicParsing="false" styleClass="icon-button" stylesheets="@../styles/ItemDisplay.css" text="❤" textAlignment="CENTER" />
+      <Button id="favoritebutton" ellipsisString="❤" layoutX="83.0" layoutY="113.0" mnemonicParsing="false" styleClass="view-button" stylesheets="@../styles/ItemDisplay.css" text="❤" />
    </children>
 </AnchorPane>
