--- a/src/main/resources/com/example/pilifitproject/view/ItemInformation.fxml
+++ b/src/main/resources/com/example/pilifitproject/view/ItemInformation.fxml
@@ -5,54 +5,30 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="328.0" prefWidth="519.0" styleClass="tab-border" stylesheets="@../styles/Closet.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.pilifitproject.controller.ItemInformationController">
+
+<AnchorPane prefHeight="309.0" prefWidth="513.0" styleClass="tab-border" stylesheets="@../styles/Closet.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.pilifitproject.controller.ItemInformationController">
    <children>
-
-                  <!-- Image & Form Details Row -->
-      <HBox layoutX="30.0" layoutY="39.0" prefHeight="214.0" prefWidth="219.0" styleClass="image-holder">
+      <AnchorPane layoutX="26.0" layoutY="29.0" prefHeight="225.0" prefWidth="219.0" style="-fx-background-color: #cccccc;" styleClass="image-holder">
          <children>
-            <GridPane prefHeight="220.0" prefWidth="204.0" styleClass="image-holder">
-               <columnConstraints>
-                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-               </columnConstraints>
-               <rowConstraints>
-                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-               </rowConstraints>
-               <children>
-                  <ImageView fx:id="ItemInformationImg" fitHeight="222.0" fitWidth="202.0" pickOnBounds="true" preserveRatio="true" styleClass="button-display" />
-               </children>
-            </GridPane>
-         </children></HBox>
-
-      <!-- Container with rounded corners -->
-      <VBox layoutX="30.0" layoutY="264.0" prefHeight="34.0" prefWidth="219.0" spacing="20">
-         <children>
-      
-            <!-- Bottom Bar -->
-            <HBox alignment="CENTER_LEFT" prefHeight="26.0" prefWidth="188.0" spacing="10">
-               <children>
-                  <TextField fx:id="nameInput" alignment="CENTER" prefHeight="26.0" prefWidth="155.0" promptText="Name" styleClass="image-holder" />
-                  <Button fx:id="favoriteBtn" ellipsisString="❤" styleClass="icon-button" text="❤" textAlignment="CENTER">
-                     <font>
-                        <Font size="19.0" />
-                     </font>
-                  </Button>
-                  <Button fx:id="deleteBtn" ellipsisString="🗑" styleClass="heart-bin" text="🗑" />
-               </children>
-            </HBox>
+            <ImageView fx:id="ItemInformationImg" fitHeight="206.0" fitWidth="189.0" layoutX="15.0" layoutY="10.0" pickOnBounds="true" preserveRatio="true" />
          </children>
-      </VBox>
+      </AnchorPane>
+      <Pane layoutX="27.0" layoutY="266.0" prefHeight="29.0" prefWidth="259.0">
+         <children>
+            <TextField fx:id="nameInput" alignment="CENTER" prefHeight="29.0" prefWidth="144.0" promptText="Name" styleClass="image-holder" />
+            <Button fx:id="favoriteBtn" ellipsisString="" layoutX="147.0" layoutY="1.0" prefHeight="26.0" prefWidth="37.0" styleClass="icon-button" text="❤" textAlignment="CENTER" />
+            <Button fx:id="deleteBtn" ellipsisString="🗑" layoutX="187.0" layoutY="1.0" styleClass="heart-bin" text="🗑" />
+         </children>
+      </Pane>
 
-      <!-- Details Column -->
-      <VBox layoutX="271.0" layoutY="57.0" prefHeight="174.0" prefWidth="218.0" spacing="10">
+                  <!-- Details Column -->
+      <VBox layoutX="263.0" layoutY="55.0" prefHeight="174.0" prefWidth="218.0" spacing="10">
          <children>
             <Text styleClass="title-text" text="CLOTHES DETAILS" wrappingWidth="189.06451416015625">
                <font>
@@ -60,33 +36,33 @@
                </font>
             </Text>
 
-            <!-- Category -->
+                        <!-- Category -->
             <HBox prefHeight="21.0" prefWidth="218.0" spacing="10">
                <Text styleClass="text-filter" text="CATEGORY:" />
                <ComboBox fx:id="categoryDropdown" prefWidth="150.0" promptText="Select Category" styleClass="image-holder" />
             </HBox>
 
-            <!-- Style -->
+                        <!-- Style -->
             <HBox prefHeight="22.0" prefWidth="238.0" spacing="10">
                <Text styleClass="text-filter" text="STYLE:" wrappingWidth="76.5501708984375" />
                <ComboBox fx:id="styleDropdown" prefWidth="150.0" promptText="Select Style" styleClass="image-holder" />
             </HBox>
 
-            <!-- Color -->
+                        <!-- Color -->
             <HBox prefHeight="19.0" prefWidth="218.0" spacing="10">
                <Text styleClass="text-filter" text="COLOR:" wrappingWidth="76.4595947265625" />
                <ComboBox fx:id="colorDropdown" prefWidth="150.0" promptText="Select Color" styleClass="image-holder" />
             </HBox>
 
-            <!-- Size -->
+                        <!-- Size -->
             <HBox prefHeight="22.0" prefWidth="218.0" spacing="10">
                <Text styleClass="text-filter" text="SIZE:" wrappingWidth="76.82635498046875" />
                <TextField fx:id="sizeInput" alignment="CENTER" prefHeight="2.0" prefWidth="131.0" promptText="Enter size" styleClass="image-holder" />
             </HBox>
 
-         </children>
+                     </children>
       </VBox>
-      <Button fx:id="closeButton" layoutX="475.0" layoutY="26.0" mnemonicParsing="false" onAction="#handleCancel" styleClass="close-button" text="X" />
-      <Button fx:id="SaveItemInfoBtn" layoutX="440.0" layoutY="267.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="50.0" styleClass="save-button" text="save" />
+      <Button fx:id="closeButton" layoutX="476.0" layoutY="7.0" mnemonicParsing="false" onAction="#handleCancel" styleClass="close-button" text="X" />
+      <Button fx:id="SaveItemInfoBtn" layoutX="455.0" layoutY="268.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="50.0" styleClass="save-button" text="save" />
    </children>
 </AnchorPane>
