--- a/src/main/resources/com/example/pilifitproject/view/FitDialog.fxml
+++ b/src/main/resources/com/example/pilifitproject/view/FitDialog.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 
-<AnchorPane fx:id="fitDialog" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="255.0" prefWidth="205.0" style="-fx-border-radius: 20;" styleClass="tab-border" stylesheets="@../styles/FitDialog.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane fx:id="fitDialog" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="255.0" prefWidth="205.0" style="-fx-border-radius: 20;" styleClass="tab-border" stylesheets="@../styles/FitDialog.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.pilifitproject.controller.FitDialogController">
     <children>
         <Pane layoutX="8.0" layoutY="9.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="197.0" prefWidth="189.0" style="-fx-background-color: #CCCCCC;" styleClass="image-view">
             <children>
@@ -28,6 +28,6 @@
             </children>
         </Pane>
         <TextField id="TitleOfTheOutfit" fx:id="fitNameField" layoutX="10.0" layoutY="209.0" prefHeight="40.0" prefWidth="151.0" promptText="Fit Name" styleClass="nameFD-button" stylesheets="@../styles/FitDialog.css" />
-        <Button id="DeleteButton" fx:id="deleteButton" layoutX="155.0" layoutY="206.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="40.0" prefWidth="48.0" styleClass="view-button" stylesheets="@../styles/FitDialog.css" text="🗑" />
+        <Button id="DeleteButton" fx:id="deleteButton" layoutX="124.0" layoutY="209.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="40.0" prefWidth="48.0" styleClass="view-button" stylesheets="@../styles/FitDialog.css" text="🗑" />
     </children>
 </AnchorPane>
