--- a/src/main/resources/com/example/pilifitproject/view/Collection.fxml
+++ b/src/main/resources/com/example/pilifitproject/view/Collection.fxml
@@ -75,9 +75,9 @@
     <center>
         <AnchorPane prefHeight="442.0" prefWidth="1580.0" BorderPane.alignment="CENTER">
             <children>
-                <ScrollPane fitToHeight="true" fitToWidth="true" layoutX="225.0" layoutY="21.0" prefHeight="480.0">
+                <ScrollPane fitToHeight="true" fitToWidth="true" layoutX="225.0" layoutY="21.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="480.0" prefWidth="1112.0">
                     <content>
-                        <GridPane id="upload/itemsgridpane" fx:id="fitItemGrid" gridLinesVisible="true" hgap="15.0" vgap="10.0">
+                        <GridPane id="upload/itemsgridpane" fx:id="fitItemGrid" gridLinesVisible="true" hgap="15.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="530.0" prefWidth="1110.0" vgap="10.0">
                             <columnConstraints>
                                 <ColumnConstraints hgrow="SOMETIMES" maxWidth="205.0" minWidth="205.0" percentWidth="0.0" prefWidth="205.0" />
                                 <ColumnConstraints halignment="CENTER" hgrow="ALWAYS" maxWidth="205.0" minWidth="205.0" percentWidth="0.0" prefWidth="205.0" />
